# recordprep

./: .gitignore  AGENTS.md  CreateMinOutlineFromTOC.sh  LICENSE  README.md  pyproject.toml  recordprep.py
example_python_GTK4_app/: focus.py
example_rag_scripts/: CreateRagCases.py
prompts/: initial_prompt.txt
