[project]
name = "recordprep"
version = "0.1.0"
description = "Pipleline for making a PDF record useful for appellate attorneys"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "langchain>=1.2.6",
    "langchain-chroma>=1.1.0",
    "langchain-text-splitters>=1.1.0",
    "langchain-voyageai>=0.3.2",
    "pdftotext>=3.0.0",
    "pygobject>=3.54.5",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.0",
    "voyageai>=0.3.7",
]
